fixed overlapping error

--- a/style.css
+++ b/style.css
@@ -61,17 +61,6 @@ nav li{
     display: inline-block;
     padding: 20px 20px;
 }
-/* .nav{
-    position: absolute;
-    top: 0px;
-    right: 0px;
-}
-.nav2 a{
-    font-size: 15px;
-}
-.nav2 li{
-    padding: 10px 10px;
-} */
 .circleImg{
     border-radius: 50%;
     display: inline;
@@ -83,15 +72,11 @@ nav li{
 .container{
     border: 5px solid #4CAF50;
     background-color:#4CAF50;
-    margin-top: 50px;
-    /*margin-left: 10px;
-    margin-right: 10px;*/
     width: 700px;
     height: 400px;
-    display: flexbox;
     position: relative;
-    top: 60px;
-    left: 350px;
+    top: 200px;
+    left: 250px;
     animation: fadeMe 2s linear 0s 1;
     box-shadow: 10px 0px 10px 10px rgb(183, 186, 187);
 }
@@ -147,7 +132,7 @@ nav li{
 .about{
     display: grid;
     gap: 30px;
-    grid-template-columns: repeat(auto-fill, minmax(550px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(600px, 2fr));
     grid-template-rows: 1fr;
     justify-items: start;
 }
@@ -156,8 +141,6 @@ nav li{
     background-image: linear-gradient(-20deg, #e9defa 0%, #fbfcdb 100%);
     height: 300px;
     width: 500px;
-    /* position: absolute;
-    left: 470px; */
     text-align: center;
     animation: moveBoxLeft 0.6s linear 0s 1;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
@@ -176,9 +159,6 @@ nav li{
     border: 2px solid #2C3A47;
     height: 350px;
     width: 500px;
-    /* position: absolute;
-    top: 500px;
-    left: 200px; */
     text-align: center;
     margin-left: 100px;
     padding-right: 40px;
@@ -221,9 +201,6 @@ nav li{
     width: 400px;
     justify-self: end;
     margin-right: 150px;
-    /* position: absolute;
-    top: 500px;
-    left: 800px; */
     text-align: center;
     padding-right: 35px;
     background-image: linear-gradient(to top, #c1dfc4 0%, #deecdd 100%);
